--- a/pinterest/package.json
+++ b/pinterest/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1"
   }
 }
